k8s/llamaindex/llamaindex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llamaindex-ingress
  namespace: llama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: harvester
    http:
      paths:
      - path: /llamaindex
        pathType: Prefix
        backend:
          service:
            name: llamaindex
            port:
              name: http
